fixed white space at top of navbar

--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -1,7 +1,3 @@
-/* .navbar__container {
-    background-color: orange;
- }
- */
 
 nav {
     overflow: hidden;
@@ -14,33 +10,6 @@ nav {
     opacity: 100%;
     box-shadow: 1px 1px 5px 1px gray;
 }
-
-/* .logo{
-    float: left;
-    transition-duration: 0.2s;
-}
-
-.logo:hover {
-    background-color: rgb(253, 212, 136);
-} */
-
-/* .mainButtons > a {
-    vertical-align: middle;
-    float: left;
-    color: gray;
-    text-align: center;
-    padding: 0px 0px 0px 0px;
-    text-decoration: none;
-    transition-duration: 0.2s;
-    width: 4rem;
-    height: 41px;
-    border-radius: 15px;
-    margin: 0.25rem 1rem 0 0.25rem;
-} */
-
-/* .mainButtons > a:hover {
-    background-color: rgb(253, 212, 136);
-} */
 
 .userButtons > a {
     float: right;
@@ -55,24 +24,26 @@ nav {
     align-items: center;
     float: left;
     padding: 5px;
-
 }
 
 .userButtons {
     border-color: var(--theme-button-filled-border-color);
     box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.7);
     box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.7);
-    padding: 2px;
+    padding: 0 4px;
 }
 
 #login-button {
     color: #39739d;
     text-align: center;
+    display: flex;
+    align-items: center;
     font-size: 13px;
     background-color: #e1ecf4;
     border-radius: 5px;
     box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.7);
-    height: 44px;
+    margin-top: 2px;
+    height: 42px;
     transition-duration: 0.2s;
     text-decoration: none;
 }
@@ -84,11 +55,14 @@ nav {
 #register-button {
     color: white;
     font-size: 13px;
+    display: flex;
+    align-items: center;
     text-align: center;
     background-color: #0077cc;
     border-radius: 5px;
     box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.4);
-    height: 44px;
+    margin-top: 2px;
+    height: 42px;
     transition-duration: 0.2s;
     margin-right: 3px;
     text-decoration: none;
@@ -101,14 +75,17 @@ nav {
 #logout-button{
     float: right;
     margin-right: 2px;
+    display: flex;
+    align-items: center;
     color: white;
     background-color: #0077cc;
     border-color: #0077cc;
     border-radius: 5px;
     box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.4);
     transition-duration: 0.2s;
+    margin-top: 2px;
     width: 65px;
-    height: 44px;
+    height: 42px;
 }
 
 #logout-button:hover {
@@ -121,7 +98,7 @@ nav {
 
 #search {
     min-width: 20rem;
-    height: 40px;
+    height: 38px;
 }
 
 #search:focus {
